--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-08-03 16:57:43 -0400 
+%% Created for Vijay at 2011-08-04 14:33:32 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,15 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@inproceedings{clutter2004,
+	Author = {Wei Peng and Matthew O. Ward and Elke A. Rundensteiner},
+	Booktitle = {IEEE Symposium on Information Visualization},
+	Date-Added = {2011-08-04 14:30:40 -0400},
+	Date-Modified = {2011-08-04 14:33:08 -0400},
+	Pages = {89-96},
+	Title = {Clutter Reduction in Multi-Dimensional Data Visualization Using Dimension Reordering},
+	Year = {2004}}
 
 @article{edgebundles2006,
 	Author = {Danny Holten},
