--- a/mapping.tex
+++ b/mapping.tex
@@ -84,19 +84,19 @@ A \emph{bijection} is a function that is both an \emph{injection} and a \emph{su
 
 \begin{figure}[ht]
 \centering
-\subfloat[Subfigure 1 list of figures text][Non-injective and non-surjective]{
+\subfloat[Non-injective and non-surjective][Non-injective and non-surjective]{
 \includegraphics[width=0.35\textwidth]{200px-Total_function.png}
 \label{fig:figure1}}
 \qquad
-\subfloat[Subfigure 2 list of figures text][Injection]{
+\subfloat[Injection][Injection]{
 \includegraphics[width=0.35\textwidth]{200px-Injection.png}
 \label{fig:figure2}}
 \qquad
-\subfloat[Subfigure 3 list of figures text][Surjection]{
+\subfloat[Surjection][Surjection]{
 \includegraphics[width=0.35\textwidth]{200px-Surjection.png}
 \label{fig:figure3}}
 \qquad
-\subfloat[Subfigure 4 list of figures text][Bijection]{
+\subfloat[Bijection][Bijection]{
 \includegraphics[width=0.35\textwidth]{200px-Bijection.png}
 \label{fig:figure4}}
 \caption{Four types of functions}
