--- a/introduction.tex
+++ b/introduction.tex
@@ -10,24 +10,10 @@ What is to be sought in designs for the display of information is the clear port
 the revelation of the complex. - Edward R. Tufte, 2001
 \end{quote}
 
-\begin{comment}
-A thesis should present results in a scholarly fashion.
-The following discusses the organization of a thesis, such as would be
- appropriate to presenting research results pertaining to Electrical \&
- Computer Engineering.
-\end{comment}
-
 \section{Project Overview}
 
-\begin{comment}
-The terms of reference differ for a Master's Thesis and a Doctoral Thesis.
-For the Master's Thesis, the Faculty of Graduate Studies and Research at
-McGill University \cite{McGillTG:P1994} gives the following guidelines.
+The purpose of this research project is to examine the effects of applying a thorough understanding of a problem domain and the a selection of theoretical principles in the areas of user interface design, data visualization, and human cognition to design a user interface that allows a user to solve problems in the domain as effectively as possible. 
 
-The terms of reference state that ``In most disciplines, Master's theses will
- not exceed 100 pages.''
-\end{comment}
-
-\section{Thesis Overview}
+\section{Layout}
 
 \section{Contributions}
